--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="text">
           <div class="text-one">Hello,</div>
           <div class="text-two">I'm Rahul.v</div>
-          <div class="text-three">Bsc-cs Student</div>
+          <div class="text-three">Bsc-cs Graduate</div>
           <div class="text-four">From India</div>
         </div>
         <div class="button">
